# noisemaker

./: .gitignore  CMakeLists.txt  README  README.md  README.rst  adder.cpp  adder.h  design_decisions  fileFuncs.cpp  fileFuncs.h  fileFuncsTests.cpp  linearEnvelope.cpp  noisemaker.cpp  noisemaker.h  noisemakerTests  noisemakerTests.cpp  oscillator.cpp  oscillator.h  premadeSignals.cpp  premadeSignals.h
cmake/: FindSphinx.cmake
docs/: CMakeLists.txt  Doxyfile.in  conf.py  index.rst  noisemaker.rst
docs/signals/: adder.rst  constant.rst  linearEnvelope.rst  multiplier.rst  note.rst  oscillator.rst  signal.rst
docs/source/: conf.py  index.rst
docs/source/signals/: adder.rst  constant.rst  multiplier.rst  oscillator.rst  signal.rst
include/: constant.h  fileFuncs.h  linearEnvelope.h  noisemaker.h  premadeSignals.h
src/: CMakeLists.txt  adder.cpp  adder.h  constant.cpp  constant.h  fileFuncs.cpp  fileFuncs.h  linearEnvelope.cpp  linearEnvelope.h  multiplier.cpp  multiplier.h  noisemaker.cpp  noisemaker.h  note.h  oscillator.cpp  oscillator.h  premadeSignals.cpp  signal.cpp  signal.h
tests/: CMakeLists.txt  fileFuncsTests.cpp  megalovania.cpp  noisemakerTests.cpp
